--- a/app/static/css/mobile/dialog.1.css
+++ b/app/static/css/mobile/dialog.1.css
@@ -9,6 +9,7 @@
 
   background-color: #000;
   opacity: .5;
+  z-index: 4;
 }
 
 .dialog_style {
@@ -24,6 +25,7 @@
   background-color: var(--bg-color);
   border-radius: 5px;
   border: 1px solid var(--main-border-color);
+  z-index: 4;
 }
 
 .dialog_top_name {
@@ -39,13 +41,13 @@
 }
 
 .dialog_close_button {
-  border-radius: 4px 0px 0px 0px;
+  border-radius: 0px 4px 0px 0px;
   position: absolute;
-  left: 0px;
+  right: 0px;
   top: 0px;
   width: 100px;
   height: 35px;
-  border-right: 1px solid var(--main-border-color);
+  border-left: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 
   cursor: pointer;
