--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -47,38 +47,11 @@
     <div class="rightBar" id="rightBar" style="display: none">
       <!--закрытие панели-->
       <div class="file_close_button block_select button_margin" onclick="close_rightBar()">
-        <img class="icon" width="20" height="20" src="static/img/cross.svg">
-        <p>close</p>
-      </div>
-
-      <div class="preview_info" id="checkbox_preview_image_div">
-        <div style="position: absolute; margin: -7px 12px">
-          <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview()">
-          <label for="checkbox_preview_image"><p>show preview</p></label>
-        </div>
+        <img class="icon" width="30" height="30" src="static/img/cross.svg">
       </div>
 
       <!--информация о выбранном файле-->
       <div id="file_info_block" style="display: none">
-        <!--редактирование-->
-        <div id="file_activity_edit_button" class="file_activity_button block_select button_margin" style="width: 80px; display: none" onclick="()">
-          <img class="icon" width="20" height="20" src="static/img/activity/edit.svg">
-          <p>edit</p>
-        </div>
-
-        <!--распаковка-->
-        <div id="file_activity_unpack_button" class="file_activity_button block_select button_margin" style="width: 100px; display: none" onclick="activity_unpack_file()">
-          <img class="icon" width="20" height="20" src="static/img/activity/unzip.svg">
-          <p>unpack</p>
-        </div>
-
-        <!--просмотр-->
-        <a id="file_activity_view_button_href" target="_blank">
-          <div id="file_activity_view_button" class="file_activity_button block_select button_margin" style="width: 80px; display: none" onclick="()">
-            <img class="icon" width="20" height="20" src="static/img/activity/see.svg">
-            <p>view</p>
-          </div>
-        </a>
 
         <!--иконка и имя файла-->
         <div class="file_ico_name_div">
@@ -110,14 +83,14 @@
         </div>
 
         <!--продпросмотр фотографии-->
-        <div id="file_activity_view">
+        <div id="file_activity_view" class="activity_container">
+
+          <div class="preview_text" id="preview_text_div">
+            <textarea id="preview_text_textarea" class="preview_text_textarea input_style scroll_style" readonly></textarea>
+          </div>
+
           <div class="preview_image" id="preview_image_div">
-
-            <div class="preview_image_mobile_move" style="left: 0px" onclick="next_image(true)"></div>
-
-            <div class="preview_image_mobile_move" style="right: 0px" onclick="next_image()"></div>
-
-            <img id="preview_image" class="" src="" width="100%" />
+            <img id="preview_image" class="preview_image_image" src="" onclick="image_fullscreen()"/>
 
             <div class="preview_display_type">
               <label for="" style="position: absolute; margin: 0px 10px;">
@@ -134,26 +107,60 @@
           </div>
 
           <div class="preview_video" id="preview_video_div">
-            <video id="preview_video" width="100%" onclick="play_video()"></video>
+            <video class="preview_video_player" id="preview_video" width="300px" onclick="play_video()"></video>
             <div class="preview_video_controls">
-              <img id="preview_play_pause_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px;" src="static/img/player/play.svg" onclick="play_video()"/>
-              <input type="range" id="preview_video_volume" style="display: none;" name="" min="0" max="100" value="50" step="1" oninput="set_volume_video(this.value)" onchange="set_volume_video(this.value)">
-              <input type="range" id="preview_video_input_duration" style="position: absolute; left: 30px; right: 25px; bottom: 8px" name="" min="0" max="100" value="0" step="1" onchange="set_duration_video(this.value)" onmouseover="video_duration_hover = true" onmouseout="video_duration_hover = false" onmousemove="showTooltip_video_duration(event)">
-              <img id="preview_fullscreen_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px; right: 0px" src="static/img/player/fullscreen.svg" onclick="full_screen()"/>
+              <img id="preview_play_pause_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 6px;" src="static/img/player/play.svg" onclick="play_video()"/>
+              <input type="range" id="preview_video_volume" style="width: 65px; position: absolute; right: 20px; bottom: 8px" name="" min="0" max="100" value="50" step="1" oninput="set_volume_video(this.value)" onchange="set_volume_video(this.value)">
+              <input type="range" id="preview_video_input_duration" style="position: absolute; left: 30px; right: 95px; bottom: 8px" name="" min="0" max="100" value="0" step="1" onchange="set_duration_video(this.value)" onmouseover="video_duration_hover = true" onmouseout="video_duration_hover = false" onmousemove="showTooltip_video_duration(event)">
+              <img id="preview_fullscreen_video" class="icon" width="20" height="20" style="position: absolute; margin: 2px 4px; right: 2px" src="static/img/player/fullscreen.svg" onclick="full_screen()"/>
               <div class="preview_video_duration_info" id="preview_video_duration_info">
                 <p id="preview_video_duration_info_p"></p>
               </div>
             </div>
           </div>
 
-          <div class="preview_audio block_select" id="preview_audio_div" style="height: 50px; cursor: default;">
+          <div class="preview_audio block_select" id="preview_audio_div" style="height: 100px; cursor: default;">
+            <div style="height: 50px;"></div>
             <audio id="preview_audio" style="margin: 5px 0px; display: none" width="300px" controls></audio>
             <img id="preview_play_pause_audio" class="icon" width="40" height="40" style="position: absolute; margin: 6px 4px;" src="static/img/player/play.svg" onclick="play_audio()"/>
             <img class="icon" width="20" height="20" style="position: absolute; left: 45px;" src="static/img/player/back.svg" onclick="next_audio(true)"/>
             <img class="icon" style="transform: rotate(-180deg); position: absolute; right: 4px;" width="20" height="20" src="static/img/player/back.svg" onclick="next_audio()"/>
             <input id="preview_audio_name" class="preview_audio_name" style="left: 80px; right: 40px; margin-top: 4px;" type=text placeholder="file name" onkeypress="" readonly>
-            <input type="range" id="preview_audio_volume" style="display: none" name="cowbell" min="0" max="100" value="50" step="1" oninput="set_volume_audio(this.value)" onchange="set_volume_audio(this.value)">
-            <input type="range" id="preview_audio_input_duration" style="position: absolute; left: 45px; right: -4px; bottom: 5px" name="cowbell" min="0" max="100" value="0" step="1" onchange="set_duration_audio(this.value)" onmouseover="audio_duration_hover = true" onmouseout="audio_duration_hover = false">
+            <input type="range" id="preview_audio_volume" style="width: 70px; position: absolute; right: -4px; bottom: 8px" name="cowbell" min="0" max="100" value="50" step="1" oninput="set_volume_audio(this.value)" onchange="set_volume_audio(this.value)">
+            <input type="range" id="preview_audio_input_duration" style="position: absolute; left: 45px; right: 75px; bottom: 8px" name="cowbell" min="0" max="100" value="0" step="1" onchange="set_duration_audio(this.value)" onmouseover="audio_duration_hover = true" onmouseout="audio_duration_hover = false">
+          </div>
+
+          <!-- редактирование (text) -->
+          <div id="file_activity_edit_button" class="round_button file_activity_button block_select button_margin" style="width: 140px; display: none" onclick="()">
+            <img class="icon" width="20" height="20" src="static/img/activity/edit.svg">
+            <p>open editor</p>
+          </div>
+
+          <!-- распаковка (zip) -->
+          <div id="file_activity_unpack_button" class="round_button file_activity_button block_select button_margin" style="width: 140px; display: none" onclick="activity_unpack_file()">
+            <img class="icon" width="20" height="20" src="static/img/activity/unzip.svg">
+            <p>unpack</p>
+          </div>
+
+          <!-- просмотр (pdf) -->
+          <a id="file_activity_view_button_href" target="_blank">
+            <div id="file_activity_view_button" class="round_button file_activity_button block_select button_margin" style="width: 140px; display: none" onclick="()">
+              <img class="icon" width="20" height="20" src="static/img/activity/see.svg">
+              <p>view</p>
+            </div>
+          </a>
+
+          <!-- открытие оригинала (photo) -->
+          <div id="file_activity_original_button" class="round_button file_activity_button block_select button_margin" style="width: 140px; display: none" onclick="()">
+            <img class="icon" width="20" height="20" src="static/img/activity/see.svg">
+            <p>open original</p>
+          </div>
+
+          <div id="preview_info" class="preview_info">
+            <div style="position: absolute; margin: -7px 12px">
+              <input type="checkbox" class="custom-checkbox" id="checkbox_preview_image" name="checkbox_preview_image" value="yes" onchange="load_preview()">
+              <label for="checkbox_preview_image"><p>show preview</p></label>
+            </div>
           </div>
 
         </div>
@@ -312,7 +319,7 @@
       </div>
     </div>
 
-    <div id="dialog_bg" class="dialog_backgound"></div>
+    <div id="dialog_bg" class="dialog_backgound" onclick="close_dialogs()"></div>
 
     <!--диалоговые окна-->
 
