индикатор места на диске (моб)

--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -27,8 +27,8 @@
 
       <!--информация о диске-->
       <div class="disk_info">
-        <img class="icon_topBar" style="margin: 3px 5px" width="16" height="16" src="static/img/dvd-disk.svg">
-        <p id="disk_converted" class="top_bar_font_color" style="margin: -21px 30px">25.2GB / 100GB</p>
+        <img class="icon_topBar" style="margin: 3px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
+        <p id="disk_converted" class="top_bar_font_color" style="margin: -25px 28px">Loading...</p>
       </div>
 
       <!--информация о диске в виде прогресс бара-->
