--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -136,6 +136,10 @@
             <textarea id="preview_text_textarea" class="preview_text_textarea input_style scroll_style" readonly></textarea>
           </div>
 
+          <div class="preview_pdf" id="preview_pdf_div">
+            <iframe id="preview_pdf_iframe" class="preview_pdf_iframe"></iframe>
+          </div>
+
           <div class="preview_image" id="preview_image_div">
             <img id="preview_image" class="preview_image_image" width="300px" src="" onclick="image_fullscreen()"/>
 
