создание приложения с вёрсткой

--- a/app/static/css/apps.1.css
+++ b/app/static/css/apps.1.css
@@ -191,3 +191,11 @@
 }
 
 /*----------------------------------------------------------------------------*/
+.apps_path_div {
+  white-space: nowrap;
+  width: 90%;
+}
+
+.apps_path_div * {
+  margin-bottom: 0;
+}
