--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -190,11 +190,8 @@ body {
   position: relative;
   color: var(--main-font-color);
   border: 1px solid var(--main-border-color);
-  /*background-color: #0D1117;*/
   background-color: var(--bg-color);
-
   font-size: 14px;
-
   padding: 12px 10px;
   margin: 8px 0;
   border-radius: 5px;
@@ -306,6 +303,30 @@ body {
 
 .top_round_button:hover {
   border: 1px solid var(--main-hover-border-color);
+}
+
+/*----------------------------------------------------------------------------*/
+
+.round_selector {
+  position: relative;
+  font-size: 14px;
+  margin: 8px 0;
+  height: 30px;
+  border: none;
+  background-color: var(--hover-color);
+  color: var(--main-font-color);
+  border: 1px solid var(--main-border-color);
+  border-radius: 5px;
+  cursor: pointer;
+  clip-path: None;
+}
+
+.round_selector:focus {
+  outline: none;
+}
+
+.round_selector:hover {
+  /* background-color: var(--hover-color); */
 }
 
 /*----------------------------------------------------------------------------*/
