--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -418,8 +418,12 @@
       </div>
 
       <p style="position: absolute; top: 30px; font-size: 1.1em; left: 0px; width: 100%; text-align: center;">Do you really want to delete this app?</p>
+      <p id="delete_app_name" style="position: absolute; top: 60px; left: 0px; width: 100%; text-align: center;"></p>
 
-      <div id="delete_app_button" class="round_button red_dialog_button block_select" style="left: 10px; bottom: 10px; width: 100px;">
+      <div class="round_button dialog_button block_select" style="right: 10px; bottom: 10px; width: 100px;" onclick="close_delete_app_dialog()">
+        <p style="margin: 5px 28px">cancel</p>
+      </div>
+      <div id="delete_app_button" class="round_button red_dialog_button block_select" style="right: 120px; bottom: 10px; width: 100px;">
         <p style="margin: 5px 28px">delete</p>
       </div>
     </div>
