--- a/app/static/css/apps.1.css
+++ b/app/static/css/apps.1.css
@@ -23,7 +23,7 @@
 
 .apps_list_div_scroll {
   position: absolute;
-  top: 297px;
+  top: 328px;
   bottom: 35px;
   width: var(--width-left-bar);
   overflow-y: scroll;
@@ -33,7 +33,6 @@
 
 .apps_list_div {
   width: 100%;
-  /* height: 100%; */
   direction: ltr;
 }
 
@@ -41,8 +40,27 @@
   margin: 0px;
 }
 
-.apps_empty_message {
+.app_search_div {
+  position: absolute;
+  top: 297px;
+  left: 0px;
+  width: var(--width-left-bar);
+  height: 30px;
+  border-bottom: 1px solid var(--main-border-color);
+}
 
+.app_search_div input {
+  margin: 2px 5px;
+  height: 26px;
+  background-color: var(--main-input-color);
+}
+
+.apps_empty_message {
+  position: absolute;
+  top: 297px;
+  left: 0px;
+  width: var(--width-left-bar);
+  text-align: center;
 }
 
 .apps_empty_message p {
@@ -92,6 +110,7 @@
   position: absolute;
   left: 40px;
   margin: 0px 0px;
+  color: var(--color-hide-font);
 }
 
 .apps_list_element:hover .apps_list_delete {
